# Voicy

./: CMakeLists.txt  RecFromMic.cpp  RecFromMic.h  Voicy.cpp
FSMs/Include/: ActionState.h  BaseState.h  EraseState.h  IState.h  KryshaState.h  SaveState.h  ShoppingState.h  StateMachine.h  StringToEnumConverter.h
FSMs/Source/: ActionState.cpp  BaseState.cpp  EraseState.cpp  KryshaState.cpp  SaveState.cpp  ShoppingState.cpp  StateMachine.cpp
Resources/: ShoppingList.txt
Resources/Include/: .Festival.h.swp  .IResource.h.swp  .ShoppingList.h.swp  Festival.h  IResource.h  ShoppingList.h
Resources/Source/: .Festival.cpp.swp  .ShoppingList.cpp.swp  Festival.cpp  ShoppingList.cpp
Resources/languageResources/: gauden_counts  tmat_counts  wordlist.txt
Resources/languageResources/LanguageAndAcousticModel/: 3923.dic  3923.lm  base.dic  base.lm  base.log_pronounce  base.sent  base.vocab
Resources/languageResources/adapted_cmusphinx-en-us-ptm-5.2/: means  transition_matrices  variances
Resources/languageResources/adaptingFiles/: adaptModel.sh  arctic.fileids  arctic.transcription  bulki.mfc  chleb.mfc  drob.mfc  gauden_counts  generateAcousticFeatureFiles.sh  gotowe.mfc  jaja.mfc  krysia.mfc  lakocie.mfc  madzik.mfc  maslo.mfc  mleko.mfc  nic.mfc  notatka.mfc  owoce.mfc  pokaz.mfc  pomoz.mfc  powiedz.mfc  przyprawa.mfc  ser.mfc  slawdzik.mfc  tmat_counts  usun.mfc  wieprzowina.mfc  woda.mfc  wolowina.mfc  wroc.mfc  wyczysc.mfc  wykonaj.mfc  zakupy.mfc  zapisz.mfc  ziola.mfc
scripts/: .addWord.sh.swo  addWord.py  addWord.sh  updateLanguageModel.py  updateModel.sh
